syntax = 'proto3';

option java_multiple_files = true;
option java_package = "com.vikadata.integration.grpc";
option java_outer_classname = "GrpcMessage";

package grpc;
// internal call rpc, node copy message
message NodeCopyRo {
  // original datasheet ID
  string node_id = 1;
  // copy datasheet ID
  string copy_node_id = 2;
  // user ID
  string user_id = 3;
  // user uuid
  string uuid = 4;
  // fieldId array to be converted
  repeated string field_ids = 5;
}

message NodeDeleteRo {
  // delete the array of nodes
  repeated string delete_node_id = 1;
  // associated table that needs to convert fields
  repeated string link_node_id = 2;
  // user ID
  string user_id = 3;
  // user uuid
  string uuid = 4;
}

message BasicResult {
  int32 code = 1;
  string message = 2;
  bool success = 3;
}
